Primera versión funcional que permite Alta de Médicos y Pacientes

--- a/Hospital/Hospital.csproj
+++ b/Hospital/Hospital.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Empleado.cs" />
     <Compile Include="Hospital.cs" />
     <Compile Include="Medico.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="Paciente.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Program.cs" />
